packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_for__aliases_with_complex_expressions.snap
---
source: tests/vapor/v_for.rs
expression: code
---
import { setNodes as _setNodes } from "vue-jsx-vapor";
import { child as _child, createFor as _createFor, template as _template } from "vue";
const t0 = _template("<div> </div>");
(() => {
  const n0 = _createFor(() => list, (_for_item0) => {
    const n2 = t0();
    const x2 = _child(n2);
    _setNodes(x2, () => _for_item0.value.foo + baz + _for_item0.value.baz[0]);
    return n2;
  });
  return n0;
})();
