packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_for__array_de_structured_value_with_rest.snap
---
source: tests/vapor/v_for.rs
expression: code
---
import { setNodes as _setNodes } from "/vue-jsx-vapor/vapor";
import { child as _child, createFor as _createFor, template as _template } from "vue";
const t0 = _template("<div> </div>");
(() => {
  const n0 = _createFor(() => list, (_for_item0, _for_key0) => {
    const n2 = t0();
    const x2 = _child(n2);
    _setNodes(x2, () => _for_item0.value[0] + _for_item0.value.slice(3) + _for_key0.value + _for_item0.value[1][0] + _for_item0.value[2].bar);
    return n2;
  }, ([id, [foo], {bar}, ...other], index) => id);
  return n0;
})();
