packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_for__expression_object.snap
---
source: tests/vapor/v_for.rs
expression: code
---
import { setNodes as _setNodes } from "vue-jsx-vapor";
import { child as _child, createFor as _createFor, renderEffect as _renderEffect, setProp as _setProp, template as _template } from "vue";
const t0 = _template("<div> </div>");
(() => {
  const n0 = _createFor(() => Array.from({ length: count.value }).map((_, id) => ({ id })), (_for_item0, _for_key0) => {
    const n2 = t0();
    const x2 = _child(n2);
    _setNodes(x2, () => _for_item0.value);
    _renderEffect(() => _setProp(n2, "id", _for_key0.value));
    return n2;
  });
  return n0;
})();
