packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_for__multi_effect.snap
---
source: tests/vapor/v_for.rs
expression: code
---
import { createFor as _createFor, renderEffect as _renderEffect, setProp as _setProp, template as _template } from "vue";
const t0 = _template("<div></div>");
(() => {
  const n0 = _createFor(() => items, (_for_item0, _for_key0) => {
    const n2 = t0();
    _renderEffect(() => {
      _setProp(n2, "item", _for_item0.value);
      _setProp(n2, "index", _for_key0.value);
    });
    return n2;
  });
  return n0;
})();
