packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_for__nested_v_for.snap
---
source: tests/vapor/v_for.rs
expression: code
---
import { setNodes as _setNodes } from "/vue-jsx-vapor/vapor";
import { child as _child, createFor as _createFor, setInsertionState as _setInsertionState, template as _template } from "vue";
const t0 = _template("<span> </span>");
const t1 = _template("<div></div>");
(() => {
  const n0 = _createFor(() => list, (_for_item0) => {
    const n5 = t1();
    _setInsertionState(n5);
    const n2 = _createFor(() => _for_item0.value, (_for_item1) => {
      const n4 = t0();
      const x4 = _child(n4);
      _setNodes(x4, () => _for_item1.value + _for_item0.value);
      return n4;
    }, void 0, 1);
    return n5;
  });
  return n0;
})();
